--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section class="hero">
       <button id="ringBtn" class="ring" type="button" aria-label="Iniciar o finalizar servicio" data-mode="normal">
         <div class="ring-ambient" aria-hidden="true"></div>
+        <div class="ring-halo" aria-hidden="true"></div>
 
         <svg class="ring-svg" viewBox="0 0 200 200" aria-hidden="true">
           <defs>
